# authfit

./: .gitignore  README.md  git_init.sh  pyproject.toml
authfit/: __main__.py  assets.py  authenticity.py  gui.py
authfit/assets/: exercises.db
scripts/: create_exercise_db.py
src/: __main__.py  authenticity.py  widgets.py
src/assets/: exercises.db
src/authenticity/: __main__.py  assets.py  authenticity.css  authenticity.py  test.py
src/authenticity/assets/: exercises.db
src/authenticity/scripts/: create_exercise_db.py
src/panels/: exerciseinfo.py
