[project]
name = "authfit"
version = "0.0.1"
description = "Workout tracking/exercise database app."
readme = "README.md"
requires-python = ">3.9"
license = { text="MIT" }
keywords = ["workout"]
authors = [
    { name="Marcus Taylor", email="mtaylor9754@hotmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["customtkinter", "rich"]


[project.urls]
"Homepage" = "https://github.com/mtttech/authfit"
"Issues" = "https://github.com/mtttech/authfit/issues"


[project.scripts]
authfit = "authfit.authenticity:main"


[build-system]
requires = ["setuptools >= 67.0", "wheel >= 0.40"]
build-backend = "setuptools.build_meta"
