[project]
name = "authfit"
version = "0.0.2"
description = "Workout tracking/exercise database type application."
readme = "README.md"
requires-python = ">3.9"
license = { text="MIT" }
keywords = ["tracker", "workout"]
authors = [
    { name="Marcus Taylor", email="mtaylor9754@hotmail.com" },
]
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["customtkinter"]


[project.urls]
"Homepage" = "https://github.com/mtttech/authfit"
"Issues" = "https://github.com/mtttech/authfit/issues"


[project.scripts]
authfit = "authfit.authenticity:main"


[build-system]
requires = ["setuptools >= 66.0", "wheel >= 0.38"]
build-backend = "setuptools.build_meta"
